--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.redsys.gus"
@@ -40,6 +40,8 @@ android {
 dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
 
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.0-RC1'
 //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
